--- a/VETPRO2/Content/StyleSheet.css
+++ b/VETPRO2/Content/StyleSheet.css
@@ -99,3 +99,28 @@ div.banner {
     height: 150px;
    overflow: hidden;
 }
+/*-------------------------------*/
+/*Table                          */
+/*-------------------------------*/
+table {
+   display:block;
+   position: fixed;
+   padding: 150px 5px 5px 100px;
+ // border: 1px solid red;
+   margin-top: 100px;
+   margin-left: 200px;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th, td {
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even){background-color: #f2f2f2}
+
+th {
+    background-color: #167581;
+    color: white;
+}
