--- a/VETPRO2/Views/AnimalHistory2/Details.cshtml
+++ b/VETPRO2/Views/AnimalHistory2/Details.cshtml
@@ -1,14 +1,13 @@
-﻿@model VETPRO2.Models.AnimalHistory
+﻿@model VETPRO2.Models.AnimalHistory2
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Details";
 }
 
-<h2>Delete</h2>
+<h2>Details</h2>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>AnimalHistory</h4>
+    <h4>AnimalHistory2</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -28,13 +27,8 @@
         </dd>
 
     </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
 </div>
+<p>
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Back to List", "Index")
+</p>
