--- a/VETPRO2/Views/AnimalHistory2/Edit.cshtml
+++ b/VETPRO2/Views/AnimalHistory2/Edit.cshtml
@@ -1,20 +1,22 @@
-﻿@model VETPRO2.Models.AnimalHistory
+﻿@model VETPRO2.Models.AnimalHistory2
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>AnimalHistory</h4>
+        <h4>AnimalHistory2</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Id)
+
         <div class="form-group">
             @Html.LabelFor(model => model.CurrentMedication, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -33,14 +35,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" onclick="location.href='@Url.Action("Create", "ChipIdentifications")'"/>
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Cancel", "Index", "AnimalInfoes")
+    @Html.ActionLink("Back to List", "Index")
 </div>
 
 @section Scripts {
