--- a/VETPRO2/Views/AnimalInfoes/Details.cshtml
+++ b/VETPRO2/Views/AnimalInfoes/Details.cshtml
@@ -1,4 +1,7 @@
-﻿@using System.Web.UI.WebControls
+﻿@{
+    Layout = "~/Views/Shared/Facility.cshtml";
+}
+@using System.Web.UI.WebControls
 @model VETPRO2.Models.AnimalInfo
 
 @{
