--- a/VETPRO2/Views/Home/Index.cshtml
+++ b/VETPRO2/Views/Home/Index.cshtml
@@ -1,91 +1,7 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿
+
+@{
+    ViewBag.Title = "Home!";
 }
-@model VETPRO2.Models.CompositeModel
 
-<div>
-    @using (Html.BeginForm("Index", "Home"))
-    {
-        @Html.AntiForgeryToken()
-        <div>
-            <h4>Send Model One</h4>
-            <fieldset>
-                @Html.ValidationSummary(true, "ValidationSummary")
-                <ol>
-                    <li>
-                        @Html.LabelFor(m => m.AnimalInfo.AnimalName)
-                        @Html.TextBoxFor(m => m.AnimalInfo.AnimalName)
-                        @Html.ValidationMessageFor(m => m.AnimalInfo.AnimalName)
-                    </li>
-                    <li>
-                        @Html.LabelFor(m => m.AnimalInfo.AnimalSpecies)
-                        @Html.TextBoxFor(m => m.AnimalInfo.AnimalSpecies)
-                        @Html.ValidationMessageFor(m => m.AnimalInfo.AnimalSpecies)
-                    </li>
-                    <li>
-                        @Html.LabelFor(m => m.AnimalInfo.AnimalBreed)
-                        @Html.TextBoxFor(m => m.AnimalInfo.AnimalBreed)
-                        @Html.ValidationMessageFor(m => m.AnimalInfo.AnimalBreed)
-                    </li>
-                    <li>
-                        @Html.LabelFor(m => m.AnimalInfo.AnimalGender)
-                        @Html.TextBoxFor(m => m.AnimalInfo.AnimalGender)
-                        @Html.ValidationMessageFor(m => m.AnimalInfo.AnimalGender)
-                    </li>
-                    <li>
-                        @Html.LabelFor(m => m.AnimalInfo.AnimalAge)
-                        @Html.TextBoxFor(m => m.AnimalInfo.AnimalAge)
-                        @Html.ValidationMessageFor(m => m.AnimalInfo.AnimalAge)
-                    </li>
-                    <li>
-                        @Html.LabelFor(m => m.AnimalInfo.AnimalEstimatedWeight)
-                        @Html.TextBoxFor(m => m.AnimalInfo.AnimalEstimatedWeight)
-                        @Html.ValidationMessageFor(m => m.AnimalInfo.AnimalEstimatedWeight)
-                    </li>
-                    <li>
-                        @Html.LabelFor(m => m.AnimalInfo.AnimalDescription)
-                        @Html.TextBoxFor(m => m.AnimalInfo.AnimalDescription)
-                        @Html.ValidationMessageFor(m => m.AnimalInfo.AnimalDescription)
-                    </li>
-                    <li>
-                        @Html.LabelFor(m => m.AnimalBehavior.AggressionComments)
-                        @Html.TextBoxFor(m => m.AnimalBehavior.AggressionComments)
-                        @Html.ValidationMessageFor(m => m.AnimalBehavior.AggressionComments)
-                    </li>
-                    <li>
-                        @Html.LabelFor(m => m.AdditionalPetInfo.Belongings)
-                        @Html.TextBoxFor(m => m.AdditionalPetInfo.Belongings)
-                        @Html.ValidationMessageFor(m => m.AdditionalPetInfo.Belongings)
-                    </li>
-                    <li>
-                        @Html.LabelFor(m => m.AdditionalPetInfo.Comment)
-                        @Html.TextBoxFor(m => m.AdditionalPetInfo.Comment)
-                        @Html.ValidationMessageFor(m => m.AdditionalPetInfo.Comment)
-                    </li>
-                    <li>
-                        @Html.LabelFor(m => m.AnimalHistory2.CurrentMedication)
-                        @Html.TextBoxFor(m => m.AnimalHistory2.CurrentMedication)
-                        @Html.ValidationMessageFor(m => m.AnimalHistory2.CurrentMedication)
-                    </li>
-                    <li>
-                        @Html.LabelFor(m => m.AnimalHistory2.AnimalAllergies)
-                        @Html.TextBoxFor(m => m.AnimalHistory2.AnimalAllergies)
-                        @Html.ValidationMessageFor(m => m.AnimalHistory2.AnimalAllergies)
-                    </li>
-                    <li>
-                        @Html.LabelFor(m => m.ChipIdentification.EartagNumber)
-                        @Html.TextBoxFor(m => m.ChipIdentification.EartagNumber)
-                        @Html.ValidationMessageFor(m => m.ChipIdentification.EartagNumber)
-                    </li>
-                    <li>
-                        @Html.LabelFor(m => m.ChipIdentification.MicrochipNumber)
-                        @Html.TextBoxFor(m => m.ChipIdentification.MicrochipNumber)
-                        @Html.ValidationMessageFor(m => m.ChipIdentification.MicrochipNumber)
-                    </li>
-                </ol>
-            </fieldset>
-
-            <input class="btn" type="submit" value="Send" />
-        </div>
-    }
-</div>
+<h2>Home</h2>
