--- a/VETPRO2/Views/Shared/Facility.cshtml
+++ b/VETPRO2/Views/Shared/Facility.cshtml
@@ -1,7 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    //<link rel="stylesheet" type="text/css" href="/Content/StyleSheet.css">
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
@@ -14,30 +13,27 @@
     <div class="topbar">
         <ul class="b">
             <li class="b">@Html.ActionLink("Home", "Index", "Home")</li>
-            <li class="b">@Html.ActionLink("Profile", "Index", "Home")</li>
-            <li class="b">@Html.ActionLink("Logout", "Index", "Home")</li>
-        </ul>
+            <div style="float: right">
+                <li class="b">@Html.ActionLink("Profile", "Index", "Home")</li>
+            <li class="b">@Html.ActionLink("Logout", "Logout", "Account")</li>
+                </div>
+</ul>
     </div>
 <div class="sidebar">
     <ul class="a">
-        <li class="a">@Html.ActionLink("Owner", "Details", "OwnerInfoes", new {id=1}, null)</li>
-        <li class="a">@Html.ActionLink("Additional Contact Information", "Details", "AdditionalContacts", new { id = 1 }, null)</li>
-        <li class="a">@Html.ActionLink("Insurance", "Details", "Insurances", new { id = 1 }, null)</li>
+        <li class="a">@Html.ActionLink("Owner", "Index", "OwnerInfoes")</li>
     </ul>
     <ul class="a">
-        <li class="a">@Html.ActionLink("Animal", "Details", "AnimalInfoes", new { id = 1 }, null)</li>
+        <li class="a">@Html.ActionLink("Animal", "Index", "AnimalInfoes")</li>
         <li class="a">@Html.ActionLink("History", "Details", "AnimalHistory2", new { id = 1 }, null)</li>
         <li class="a">@Html.ActionLink("Behavior", "Details", "AnimalBehaviors", new { id = 1 }, null)</li>
         <li class="a">@Html.ActionLink("Tracking Operations", "Index", "TrackingOperations")</li>
         <li class="a">@Html.ActionLink("Shelter Operations", "Index", "ShelterOperations")</li>
+        <li class="a">@Html.ActionLink("Vet Operations", "Index", "VetOperations")</li>
     </ul>
 </div>
     <div class="one">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - VETPRO2</p>
-        </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
