--- a/VETPRO2/Views/TrackingOperations/Details.cshtml
+++ b/VETPRO2/Views/TrackingOperations/Details.cshtml
@@ -1,4 +1,7 @@
-﻿@model VETPRO2.Models.TrackingOperations
+﻿@{
+    Layout = "~/Views/Shared/Facility.cshtml";
+}
+@model VETPRO2.Models.TrackingOperations
 
 @{
     ViewBag.Title = "Details";
