--- a/VETPRO2/Views/TrackingOperations/Index.cshtml
+++ b/VETPRO2/Views/TrackingOperations/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@model IEnumerable<VETPRO2.Models.TrackingOperations>
+﻿@{
+    Layout = "~/Views/Shared/Facility.cshtml";
+}
+@model IEnumerable<VETPRO2.Models.TrackingOperations>
 
 @{
     ViewBag.Title = "Index";
