--- a/VETPRO2/Content/StyleSheet.css
+++ b/VETPRO2/Content/StyleSheet.css
@@ -2,7 +2,7 @@
 /*Sidebar                        */
 /*-------------------------------*/
 div.sidebar {
-    margin-top: 200px;
+    margin-top: 225px;
     width: 200px;
     background-color: #f1f1f1;
     height: 100%; /* Full height */
@@ -38,12 +38,13 @@ li.a a:hover:not(.active) {
 /*Vertical bar                   */
 /*-------------------------------*/
 div.topbar {
-   margin-top: 150px; 
+   margin-top: 175px; 
    background-color: #333;
    position: fixed;
    width: 100%;
    height: 50px;
    overflow: hidden;
+    z-index: 999;
 }
 ul.b {
     list-style-type: none;
@@ -54,6 +55,7 @@ ul.b {
 li.b {
     float: left;
 }
+li.c{ float: right;}
 
 li.b a {
     display: block;
@@ -63,9 +65,9 @@ li.b a {
     text-decoration: none;
 }
 
-li.b a:hover:not(.active) {
+/*li.b a:hover:not(.active) {
     background-color: #111;
-}
+}*/
 
 .active2 {
     background-color: #4CAF50;
@@ -76,15 +78,16 @@ li.b a:hover:not(.active) {
 /*-------------------------------*/
 
 div.one {
+    position: relative;
    display:block;
-   position: fixed;
-   padding: 150px 5px 5px 100px;
-  //border: 1px solid red;
-   margin-top: 100px;
+   padding: 275px 5px 5px 100px;
+  /*border: 1px solid red;*/
    margin-left: 200px;
+    margin-bottom: 100px;
    height: 100%;
    
-  overflow:auto;
+  overflow-y:auto;
+    overflow-x: hidden;
 }
 
 /*-------------------------------*/
@@ -92,12 +95,12 @@ div.one {
 /*-------------------------------*/
 
 div.banner {
-    margin-top: 0;
     background-color: #167581;
    position: fixed;
    width: 100%;
-    height: 150px;
+    height: 175px;
    overflow: hidden;
+    z-index: 998;
 }
 /*-------------------------------*/
 /*Table                          */
@@ -105,10 +108,10 @@ div.banner {
 table {
    display:block;
    position: fixed;
-   padding: 150px 5px 5px 100px;
- // border: 1px solid red;
-   margin-top: 100px;
-   margin-left: 200px;
+   /*padding: 150px 5px 5px 100px;
+   /*border: 1px solid red;*/
+   margin-top: 0px;
+   margin-left: 0px;
     border-collapse: collapse;
     width: 100%;
 }
@@ -123,4 +126,27 @@ tr:nth-child(even){background-color: #f2f2f2}
 th {
     background-color: #167581;
     color: white;
+}
+/*-------------------------------*/
+/*form                         */
+/*------------------------------*/
+
+.fillout{
+
+
+width: 250px;
+display: inline-block;
+    margin-left: 15px;
+    margin-top: 25px;
+    margin-bottom: 5px;
+    float: left;
+
+ 
+}
+
+
+
+
+[type=text]:focus {
+    background-color: white;
 }
