--- a/VETPRO2/Content/bootstrap.css
+++ b/VETPRO2/Content/bootstrap.css
@@ -1718,13 +1718,13 @@ input[type="number"]::-webkit-inner-spin-button {
 
 .form-control {
   display: block;
-  width: 100%;
+  width: 350px;
   height: 34px;
-  padding: 6px 12px;
+  padding: 0px;
   font-size: 14px;
   line-height: 1.428571429;
   color: #555555;
-  vertical-align: middle;
+  float: left;
   background-color: #ffffff;
   border: 1px solid #cccccc;
   border-radius: 4px;
@@ -1735,7 +1735,7 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .form-control:focus {
-  border-color: #66afe9;
+  border-color: #167581;
   outline: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
@@ -1923,6 +1923,7 @@ textarea.input-lg {
 
 .form-control-static {
   padding-top: 7px;
+    padding-bottom: 7px;
   margin-bottom: 0;
 }
 
@@ -1968,7 +1969,7 @@ textarea.input-lg {
 
 .form-horizontal .form-group {
   margin-right: -15px;
-  margin-left: -15px;
+  margin-left: -20px;
 }
 
 .form-horizontal .form-group:before,
@@ -3644,7 +3645,7 @@ input[type="button"].btn-block {
 
 .input-group .form-control {
   width: 100%;
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
 
 .input-group-lg > .form-control,
