--- a/VETPRO2/Views/AdditionalPetInfoes/Details.cshtml
+++ b/VETPRO2/Views/AdditionalPetInfoes/Details.cshtml
@@ -1,4 +1,7 @@
-﻿@model VETPRO2.Models.AdditionalPetInfo
+﻿@{
+    Layout = "~/Views/Shared/Facility.cshtml";
+}
+@model VETPRO2.Models.AdditionalPetInfo
 
 @{
     ViewBag.Title = "Details";
@@ -38,5 +41,4 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
 </p>
