--- a/VETPRO2/Views/AnimalBehaviors/Create.cshtml
+++ b/VETPRO2/Views/AnimalBehaviors/Create.cshtml
@@ -16,7 +16,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.AnimalId, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AnimalId, htmlAttributes: new { @class = "fillout" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.AnimalId, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.AnimalId, "", new { @class = "text-danger" })
@@ -24,7 +24,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AggressionComments, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AggressionComments, htmlAttributes: new { @class = "fillout" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.AggressionComments, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.AggressionComments, "", new { @class = "text-danger" })
