--- a/VETPRO2/Views/AnimalHistories/Create.cshtml
+++ b/VETPRO2/Views/AnimalHistories/Create.cshtml
@@ -1,4 +1,7 @@
-﻿@model VETPRO2.Models.AnimalHistory2
+﻿@{
+    Layout = "~/Views/Shared/Facility.cshtml";
+}
+@model VETPRO2.Models.AnimalHistory
 
 @{
     ViewBag.Title = "Create";
@@ -6,13 +9,12 @@
 
 <h2>Create</h2>
 
-
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>AnimalHistory2</h4>
+        <h4>AnimalHistory</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -42,7 +44,3 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
