--- a/VETPRO2/Views/AnimalHistories/Delete.cshtml
+++ b/VETPRO2/Views/AnimalHistories/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model VETPRO2.Models.AnimalHistory2
+﻿@model VETPRO2.Models.AnimalHistory
 
 @{
     ViewBag.Title = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>AnimalHistory2</h4>
+    <h4>AnimalHistory</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
