--- a/VETPRO2/Views/AnimalHistories/Details.cshtml
+++ b/VETPRO2/Views/AnimalHistories/Details.cshtml
@@ -1,4 +1,7 @@
-﻿@model VETPRO2.Models.AnimalHistory2
+﻿@{
+    Layout = "~/Views/Shared/Facility.cshtml";
+}
+@model VETPRO2.Models.AnimalHistory
 
 @{
     ViewBag.Title = "Details";
@@ -7,7 +10,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>AnimalHistory2</h4>
+    <h4>AnimalHistory</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -30,5 +33,4 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
 </p>
