--- a/VETPRO2/Views/AnimalHistories/Edit.cshtml
+++ b/VETPRO2/Views/AnimalHistories/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model VETPRO2.Models.AnimalHistory2
+﻿@model VETPRO2.Models.AnimalHistory
 
 @{
     ViewBag.Title = "Edit";
@@ -6,13 +6,12 @@
 
 <h2>Edit</h2>
 
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>AnimalHistory2</h4>
+        <h4>AnimalHistory</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -44,7 +43,3 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
