--- a/VETPRO2/Views/AnimalHistories/Index.cshtml
+++ b/VETPRO2/Views/AnimalHistories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<VETPRO2.Models.AnimalHistory2>
+﻿@model IEnumerable<VETPRO2.Models.AnimalHistory>
 
 @{
     ViewBag.Title = "Index";
