--- a/VETPRO2/Views/AnimalInfoes/Create.cshtml
+++ b/VETPRO2/Views/AnimalInfoes/Create.cshtml
@@ -16,7 +16,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.OwnerId, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.OwnerId, htmlAttributes: new { @class = "fillout" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.OwnerId, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.OwnerId, "", new { @class = "text-danger" })
@@ -24,7 +24,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AnimalName, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AnimalName, htmlAttributes: new { @class = "fillout" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.AnimalName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.AnimalName, "", new { @class = "text-danger" })
@@ -32,7 +32,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AnimalSpecies, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AnimalSpecies, htmlAttributes: new { @class = "fillout" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.AnimalSpecies, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.AnimalSpecies, "", new { @class = "text-danger" })
@@ -40,7 +40,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AnimalBreed, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AnimalBreed, htmlAttributes: new { @class = "fillout" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.AnimalBreed, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.AnimalBreed, "", new { @class = "text-danger" })
@@ -48,7 +48,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AnimalAge, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AnimalAge, htmlAttributes: new { @class = "fillout" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.AnimalAge, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.AnimalAge, "", new { @class = "text-danger" })
@@ -56,7 +56,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AnimalEstimatedWeight, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AnimalEstimatedWeight, htmlAttributes: new { @class = "fillout" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.AnimalEstimatedWeight, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.AnimalEstimatedWeight, "", new { @class = "text-danger" })
@@ -64,7 +64,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AnimalDescription, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AnimalDescription, htmlAttributes: new { @class = "fillout" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.AnimalDescription, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.AnimalDescription, "", new { @class = "text-danger" })
