--- a/VETPRO2/Views/MedicalHistories/Create.cshtml
+++ b/VETPRO2/Views/MedicalHistories/Create.cshtml
@@ -16,7 +16,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.AnimalId, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AnimalId, htmlAttributes: new { @class = "fillout" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.AnimalId, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.AnimalId, "", new { @class = "text-danger" })
@@ -24,7 +24,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Year, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Year, htmlAttributes: new { @class = "fillout" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Year, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Year, "", new { @class = "text-danger" })
@@ -32,7 +32,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Vaccination, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Vaccination, htmlAttributes: new { @class = "fillout" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Vaccination, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Vaccination, "", new { @class = "text-danger" })
@@ -40,7 +40,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Reason, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Reason, htmlAttributes: new { @class = "fillout" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Reason, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Reason, "", new { @class = "text-danger" })
